Add endpoint controller

--- a/smartlist-budget.cabal
+++ b/smartlist-budget.cabal
@@ -74,6 +74,11 @@ executable smartlist-budget
         , BasketDesc
         , Item
         , TenderController
+        , ItemController
+        , InvoiceController
+        , BudgetController
+        , BasketController
+        , BasketDescController
         , Connection
         , Evaluator
         
